# fractals

./: Cargo.toml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
src/: index.css  index.tsx  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  bench.rs  convert.rs  data.rs  fractal.rs  fractals.rs  main.rs  renderer.rs
src-tauri/src/color/: hsl.rs  mod.rs  utils.rs
src-tauri/src/pixel/: mod.rs  utils.rs
src/Fractal/: ColorOverlay.tsx  FractalViewer.tsx  SelectFractalPart.tsx  SelectViewerPart.tsx  app.ts  config.ts  fractalApp.ts  frame.ts  handlers.ts  hooks.ts  index.tsx  position.ts  renderer.ts  scheduler.ts  screenPosition.ts  screenRenderer.ts  stage.ts  state.ts  ticker.ts  tile.ts  tileManager.ts  tiles.test.ts  tiles.ts  types.ts  utils.test.ts  utils.ts  viewer.ts
src/Sidebar/: Arrow.tsx  ColorBrightness.tsx  ColorExponent.tsx  ColorInline.tsx  ColorPicker.tsx  ColorSection.tsx  ColorSectionHeader.tsx  ExportConfig.tsx  ExportSection.tsx  ExportSizePicker.tsx  FractalColorPicker.tsx  FractalEquation.tsx  FractalSection.tsx  FractalSectionHeader.tsx  FractalSelectVariant.tsx  InputNumber.tsx  InputRange.tsx  SectionHeader.tsx  SelectFractal.tsx  SidebarExportConfig.tsx  SidebarFractalConfig.tsx  SizePicker.tsx  index.tsx
src/api/: calcTile.ts  exportFractal.ts  index.ts  timer.ts  types.ts  utils.ts
src/fractal/: config.ts  fractalViewer.js  index.tsx  utils.test.ts  utils.ts  viewer.ts
src/map/: fractalViewer.js  useAspectRatio.ts
src/shared/: IconButton.tsx  (+8 more)
(+6 files in other folders)
