[package]
name = "fractals"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-save", "objc-exception", "wry"], default-features = false }
serde = { version = "1.0.193", features = ["derive"] }
num = "0.4.1"
image = "0.24.7"
hex = "0.4.3"
dirs = "5.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bench]]
name = "fractals"
path = "src/bench.rs"
harness = false

[dev-dependencies]
divan = "0.1.8"
serde_json = "1.0.108"

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Optimize for binary size
strip = "symbols" # Remove debug symbols

[profile.dev]
opt-level = 3

